fixed logo1 jump issue

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -62,16 +62,14 @@
   justify-self: center;
   align-self: center;
   width: auto;
-
-  height: 50px;
+  height: 40px;
   opacity: 1;
-
-  padding: 0 20px;
-  margin: 5px;
+  padding: 0 10px;
+  margin: 0 10px;
   background-size: contain;
   background-repeat: no-repeat;
   transition: transform 1s linear;
-  animation: 10s ease-in-out infinite;
+  animation: 2s ease-in-out infinite;
 }
 .logo-two {
   display: flex;
